--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "^1.6.3"
+    "angular": "^1.6.3",
+    "angular-ui-router": "ui-router#^0.4.2"
   }
 }
