--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
   ],
   "dependencies": {
     "angular": "^1.6.3",
-    "angular-ui-router": "ui-router#^0.4.2"
+    "angular-ui-router": "ui-router#^0.4.2",
+    "angular-cookies": "^1.6.3"
   }
 }
