--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-imagemin": "^3.1.1",
     "gulp-less": "^3.3.0",
     "gulp-load-plugins": "^1.5.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-uglify": "^2.1.0",
     "open": "^0.0.5"
   }
